# neutro

./: .gitignore  Agents.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/activations/: activations.md  softmax.md
docs/callbacks/: callbacks.md
docs/data/: data.md
docs/engine/: node.md
docs/initializers/: initializers.md
docs/layers/: base.md
docs/losses/: losses.md
docs/metrics/: metrics.md
docs/models/: language_models.md  model.md  vision_models.md
docs/optimizers/: adam.md  adamw.md  optimizers.md  sgd.md
docs/preprocessing/: preprocessing.md
docs/tokenizers/: tokenizers.md
docs/utils/: utils.md
examples/: README.md  bitnet_train.py  mnist_cnn.py  mnist_diffusion.py  mnist_functional_residual.py  mnist_vae.py  reasoning_train.py  sentiment_gru.py  wikitext_llm.py
neutro/: __init__.py  data.py  models.py
neutro/activations/: __init__.py  base.py  relu.py  sigmoid.py  silu.py  softmax.py  tanh.py
neutro/callbacks/: __init__.py  base.py  checkpoint.py  early_stopping.py  history.py  lr_scheduler.py
neutro/engine/: node.py
neutro/initializers/: __init__.py  base.py  constant.py  glorot.py  he.py  random.py
neutro/layers/: __init__.py  base.py
neutro/losses/: __init__.py  base.py  categorical_crossentropy.py  mse.py  sparse_categorical_crossentropy.py  vae_loss.py
neutro/metrics/: __init__.py  accuracy.py  base.py  (+4 more)
tests/: test_data.py  test_functional_api.py  test_mimo_fit.py  test_preprocessing.py  test_preprocessing_sequence.py  test_preprocessing_text.py  test_shared_transformer_block.py
(+156 files in other folders)
