[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neutro"
version = "0.1.0"
description = "A Keras-style deep learning library using NumPy and SciPy"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "joblib",
    "tqdm",
    "regex"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
