[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neutro"
version = "0.2.0"
description = "A Keras-style deep learning library using NumPy and SciPy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "joblib>=1.4",
    "tqdm>=4.66",
    "regex>=2024"
]

[project.optional-dependencies]
test = [
    "pytest>=9.0",
    "pytest-cov>=6.0",
]
